--- a/twitchdle/styles.css
+++ b/twitchdle/styles.css
@@ -67,7 +67,7 @@ h1 {
 
 .tile.present {
     background-color: var(--col-present);
-    color: var (--col-white);
+    color: var(--col-white);
     transform: scale(1.1);
 }
 
@@ -178,7 +178,7 @@ h1 {
     padding: 20px;
     border: 1px solid var(--col-primary-dark);
     width: 80%;
-    max-width: 400px;
+    max-width: 600px;
     text-align: center;
     border-radius: 10px;
     box-shadow: 0 4px 8px var(--col-shadow);
@@ -343,7 +343,7 @@ h1 {
     color: var(--col-primary-dark);
 }
 
-#loginWithTwitchButton {
+#loginWithTwitchButton, #instructionsToggleButton {
     padding: 10px 20px;
     background-color: #6441a5;
     color: var(--col-white);
@@ -357,4 +357,66 @@ h1 {
 
 #loginWithTwitchButton:hover {
     background-color: #9147ff;
+}
+
+#instructionsToggleButton {
+    margin-top: 60px;
+    margin-left: 180px;
+}
+
+#instructionsContainer {
+    position: absolute;
+    top: 10px;
+    left: 10px;
+    z-index: 10;
+    max-width: 300px;
+}
+
+#instructionsModal {
+    display: none;
+    position: fixed;
+    z-index: 1000;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgba(0, 0, 0, 0.5);
+}
+
+#instructionsModal .modal-content {
+    background-color: var(--col-white);
+    margin: 15% auto;
+    padding: 30px; /* Aumenta el padding para evitar superposición */
+    border: 1px solid var(--col-primary-dark);
+    width: 80%;
+    max-width: 600px;
+    text-align: center;
+    border-radius: 10px;
+    box-shadow: 0 4px 8px var(--col-shadow);
+    position: relative; /* Asegura que el contenido del modal sea el contenedor de referencia para la "X" */
+}
+
+#instructionsModal .close {
+    color: var(--col-primary-dark);
+    position: absolute; /* Posiciona la "X" de forma absoluta */
+    top: 10px; /* Ajusta la posición superior */
+    right: 10px; /* Ajusta la posición derecha */
+    font-size: 28px;
+    font-weight: bold;
+    cursor: pointer;
+}
+
+#instructionsModal .close:hover,
+#instructionsModal .close:focus {
+    color: var(--col-primary);
+    text-decoration: none;
+    cursor: pointer;
+}
+
+.instruction-icon {
+    width: 20px;
+    height: 20px;
+    vertical-align: middle;
+    margin-left: 5px;
 }
